--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,8 +66,9 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - assets/Materials/
-    - assets/Pictures/
+    - assets/materials/
+    - assets/pictures/
+    - assets/services/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
