--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   carousel_slider: ^4.0.0
   get: ^4.1.4
   get_storage: ^2.0.2
+  # sağa sola çekme slidable
+  flutter_slidable: ^0.6.0
 
 
 
